Day-10-Certmanager/ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-giropops-senhas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.williamuller.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-giropops-senhas
            port:
              number: 5000
  tls:
  - hosts:
    - giropops.williamuller.io
    secretName: giropops-senhas-tls
